# mcp-grafana

./: .gitattributes  .gitignore  .golangci.yaml  .goreleaser.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.alpine  Makefile  README.md  client_cache.go  client_cache_test.go  docker-compose.yaml  go.mod  go.sum  http_security.go  http_security_test.go  k8s_client.go  k8s_client_test.go  k8s_resource.go  k8s_resource_test.go  mcpgrafana.go  mcpgrafana_test.go  proxied_client.go  proxied_tools.go  server.json  session.go  session_horizontal_scaling_test.go  session_reaper_test.go  session_test.go  tools.go  tools_string_to_int_test.go  tools_test.go  validate_url.go  validate_url_test.go
docs/: Makefile  variables.mk
examples/: tls_example.go
observability/: logs.go  logs_test.go  observability.go  observability_test.go
testdata/: elasticsearch-seed.sh  graphite-seed.sh  influxdb-seed.sh  opensearch-seed.sh  provisioning-repo-seed.sh  quickwit-seed.sh
tests/: conftest.py  datasources_test.py  elasticsearch_test.py  navigation_test.py  pyproject.toml
tools/: alerting_client.go  alerting_client_test.go  alerting_manage_rules_datasource.go  alerting_manage_rules_handlers.go  alerting_manage_rules_test.go  alerting_manage_rules_types.go  alerting_manage_rules_unit_test.go  alerting_routing.go  alerting_routing_unit_test.go  annotations.go  api.go  api_unit_test.go  asserts.go  asserts_cloud_test.go  asserts_test.go  athena.go  athena_test.go  clickhouse.go  clickhouse_test.go  cloud_testing_utils.go  cloudmonitoring_cloud_test.go  cloudwatch.go  config.go  (+93 more)
(+139 files in other folders)
